script of vk api

--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,14 @@
         webvisor:true
       });
     </script>
+    <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?169',t.onload=function(){VK.Retargeting.Init("VK-RTRG-446413-a0pqi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script>
     <!-- /Yandex.Metrika counter -->
     <title>Автоподбор</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <noscript><div><img src="https://mc.yandex.ru/watch/88846653" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript><img src="https://vk.com/rtrg?p=VK-RTRG-446413-a0pqi" style="position:fixed; left:-999px;" alt=""/></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
