--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="yandex-verification" content="c3f1fffc63fed3d1" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
