--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <script type="text/javascript">
         const head = document.querySelector('head')
         if (location.host.endsWith('avtopodbor-spb.pro')){
-            head.insertAdjacentHTML('afterbegin', `<meta name="yandex-verification" content="c3f1fffc63fed3d1"/>`)
-        } else head.insertAdjacentHTML('afterbegin', `<meta name="yandex-verification" content="27d9e9880afd3563" />`)
+            head.insertAdjacentHTML('beforeend', `<meta name="yandex-verification" content="c3f1fffc63fed3d1"/>`)
+        } else head.insertAdjacentHTML('beforeend', `<meta name="yandex-verification" content="27d9e9880afd3563" />`)
     </script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
