--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <script type="text/javascript">
-        const head = document.querySelector('head')
-        if (location.host.endsWith('avtopodbor-spb.pro')){
-            head.insertAdjacentHTML('beforeend', `<meta name="yandex-verification" content="c3f1fffc63fed3d1"/>`)
-        } else head.insertAdjacentHTML('beforeend', `<meta name="yandex-verification" content="27d9e9880afd3563" />`)
-    </script>
+    <meta name="yandex-verification" content="27d9e9880afd3563" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
