fix: title is changing from url

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <meta property="og:title" content="Автоподбор автомобиля под ключ в СПБ и области">
-    <meta property="og:description" content="Услуги автоэкспертов по подбору автомобиля с выездом по Спб и ЛО">
+    <meta property="og:title" content="Бесплатный подбор автомобиля в Петербурге и за рубежом">
+    <meta property="og:description" content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом">
     <meta
             name="description"
-            content="Услуги автоэкспертов по подбору автомобиля с выездом по Спб и ЛО"
+            content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
@@ -46,7 +46,7 @@
         }, document.head.appendChild(t)
     }();</script>
     <!-- /Yandex.Metrika counter -->
-    <title>Автоподбор автомобиля под ключ в СПБ и области</title>
+    <title>Бесплатный подбор автомобиля в Петербурге и за рубежом</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
