add script for raiting smartwidget

--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <link type="image/x-icon" href="./favicon.ico" rel="shortcut icon">
-    <link type="Image/x-icon" href="./favicon.ico" rel="icon">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta property="og:title" content="Бесплатный подбор автомобиля в Петербурге и за рубежом">
-    <meta property="og:description" content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом">
-    <meta
-            name="description"
+    <head>
+        <meta charset="utf-8" />
+        <link type="image/x-icon" href="./favicon.ico" rel="shortcut icon" />
+        <link type="Image/x-icon" href="./favicon.ico" rel="icon" />
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+            crossorigin="anonymous"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta property="og:title" content="Бесплатный подбор автомобиля в Петербурге и за рубежом" />
+        <meta
+            property="og:description"
             content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом"
-    />
+        />
+        <meta name="description" content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <!--
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <meta name="yandex-verification" content="27d9e9880afd3563"/>
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+        <meta name="yandex-verification" content="27d9e9880afd3563" />
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript">
+            (function (m, e, t, r, i, k, a) {
+                m[i] =
+                    m[i] ||
+                    function () {
+                        (m[i].a = m[i].a || []).push(arguments);
+                    };
+                m[i].l = 1 * new Date();
+                (k = e.createElement(t)),
+                    (a = e.getElementsByTagName(t)[0]),
+                    (k.async = 1),
+                    (k.src = r),
+                    a.parentNode.insertBefore(k, a);
+            })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(88846653, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <script type="text/javascript">!function () {
-        var t = document.createElement("script");
-        t.type = "text/javascript", t.async = !0, t.src = 'https://vk.com/js/api/openapi.js?169', t.onload = function () {
-            VK.Retargeting.Init("VK-RTRG-1431635-eI4tS"), VK.Retargeting.Hit()
-        }, document.head.appendChild(t)
-    }();</script>
-    <!-- /Yandex.Metrika counter -->
-    <title>Бесплатный подбор автомобиля в Петербурге и за рубежом</title>
-</head>
-<body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<noscript>
-    <div><img src="https://mc.yandex.ru/watch/88846653" style="position:absolute; left:-9999px;" alt=""/></div>
-</noscript>
-<noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1431635-eI4tS" style="position:fixed; left:-999px;" alt=""/>
-</noscript>
-<div id="root"></div>
-<!--
+            ym(88846653, "init", {
+                clickmap: true,
+                trackLinks: true,
+                accurateTrackBounce: true,
+                webvisor: true,
+            });
+        </script>
+        <script type="text/javascript">
+            !(function () {
+                var t = document.createElement("script");
+                (t.type = "text/javascript"),
+                    (t.async = !0),
+                    (t.src = "https://vk.com/js/api/openapi.js?169"),
+                    (t.onload = function () {
+                        VK.Retargeting.Init("VK-RTRG-1431635-eI4tS"), VK.Retargeting.Hit();
+                    }),
+                    document.head.appendChild(t);
+            })();
+        </script>
+        <!-- /Yandex.Metrika counter -->
+        <title>Бесплатный подбор автомобиля в Петербурге и за рубежом</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <noscript>
+            <div>
+                <img src="https://mc.yandex.ru/watch/88846653" style="position: absolute; left: -9999px" alt="" />
+            </div>
+        </noscript>
+        <noscript
+            ><img src="https://vk.com/rtrg?p=VK-RTRG-1431635-eI4tS" style="position: fixed; left: -999px" alt="" />
+        </noscript>
+        <div id="root"></div>
+        <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
 
@@ -67,42 +85,48 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 
-<!-- LPTracker code start -->
-<script type="text/javascript">
-    (function () {
-        var projectId = 93249;
-        var script = document.createElement('script');
-        script.type = 'text/javascript';
-        script.src = 'https://lpt-crm.online/lpt_widget/out/parser.min.js';
-        window.lptWg = window.lptWg || {};
-        window.lptWg.projectId = projectId;
-        window.lptWg.parser = true;
-        document.head.appendChild(script);
-    })()
-</script>
-<script type="text/javascript">
-    (function () {
-        var projectId = 93249;
-        var script = document.createElement('script');
-        script.type = 'text/javascript';
-        script.src = 'https://lpt-crm.online/lpt_widget/kick-widget.js';
-        window.lptWg = window.lptWg || {};
-        window.lptWg.projectId = projectId;
-        window.lptWg.parser = true;
-        document.head.appendChild(script);
-    })()
-</script>
-<!-- LPTracker code End -->
+        <!-- LPTracker code start -->
+        <script type="text/javascript">
+            (function () {
+                var projectId = 93249;
+                var script = document.createElement("script");
+                script.type = "text/javascript";
+                script.src = "https://lpt-crm.online/lpt_widget/out/parser.min.js";
+                window.lptWg = window.lptWg || {};
+                window.lptWg.projectId = projectId;
+                window.lptWg.parser = true;
+                document.head.appendChild(script);
+            })();
+        </script>
+        <script type="text/javascript">
+            (function () {
+                var projectId = 93249;
+                var script = document.createElement("script");
+                script.type = "text/javascript";
+                script.src = "https://lpt-crm.online/lpt_widget/kick-widget.js";
+                window.lptWg = window.lptWg || {};
+                window.lptWg.projectId = projectId;
+                window.lptWg.parser = true;
+                document.head.appendChild(script);
+            })();
+        </script>
+        <!-- LPTracker code End -->
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-
-</body>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://res.smartwidgets.ru/app.js" defer></script>
+    </body>
 </html>
