--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,10 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 
+
+
         <!-- LPTracker code start -->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript"> OLD
             (function () {
                 var projectId = 93249;
                 var script = document.createElement("script");
@@ -109,8 +111,36 @@
                 window.lptWg.parser = true;
                 document.head.appendChild(script);
             })();
-        </script>
+        </script> -->
         <!-- LPTracker code End -->
+
+
+        <!-- LPTracker code start -->
+<script type="text/javascript">
+    (function() {
+    var projectId = 101794;
+    var script = document.createElement('script');
+    script.type = 'text/javascript';
+    script.src = 'https://lpt-crm.online/lpt_widget/out/parser.min.js';
+    window.lptWg = window.lptWg || {};
+    window.lptWg.projectId = projectId;
+    window.lptWg.parser = true;
+    document.head.appendChild(script);
+    })()
+    </script>
+    <script type="text/javascript">
+    (function() {
+    var projectId = 101794;
+    var script = document.createElement('script');
+    script.type = 'text/javascript';
+    script.src = 'https://lpt-crm.online/lpt_widget/kick-widget.js';
+    window.lptWg = window.lptWg || {};
+    window.lptWg.projectId = projectId;
+    window.lptWg.parser = true;
+    document.head.appendChild(script);
+    })()
+    </script>
+    <!-- LPTracker code End -->
 
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
