--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
 
         <!-- LPTracker code start -->
-        <!-- <script type="text/javascript"> OLD
+        <script type="text/javascript"> OLD
             (function () {
                 var projectId = 93249;
                 var script = document.createElement("script");
@@ -111,36 +111,9 @@
                 window.lptWg.parser = true;
                 document.head.appendChild(script);
             })();
-        </script> -->
+        </script>
         <!-- LPTracker code End -->
 
-
-        <!-- LPTracker code start -->
-<script type="text/javascript">
-    (function() {
-    var projectId = 101794;
-    var script = document.createElement('script');
-    script.type = 'text/javascript';
-    script.src = 'https://lpt-crm.online/lpt_widget/out/parser.min.js';
-    window.lptWg = window.lptWg || {};
-    window.lptWg.projectId = projectId;
-    window.lptWg.parser = true;
-    document.head.appendChild(script);
-    })()
-    </script>
-    <script type="text/javascript">
-    (function() {
-    var projectId = 101794;
-    var script = document.createElement('script');
-    script.type = 'text/javascript';
-    script.src = 'https://lpt-crm.online/lpt_widget/kick-widget.js';
-    window.lptWg = window.lptWg || {};
-    window.lptWg.projectId = projectId;
-    window.lptWg.parser = true;
-    document.head.appendChild(script);
-    })()
-    </script>
-    <!-- LPTracker code End -->
 
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
