--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
 
         <!-- LPTracker code start -->
-        <script type="text/javascript"> OLD
+        <script type="text/javascript">
             (function () {
                 var projectId = 93249;
                 var script = document.createElement("script");
