--- a/public/index.html
+++ b/public/index.html
@@ -87,32 +87,7 @@
 
 
 
-        <!-- LPTracker code start -->
-        <script type="text/javascript">
-            (function () {
-                var projectId = 93249;
-                var script = document.createElement("script");
-                script.type = "text/javascript";
-                script.src = "https://lpt-crm.online/lpt_widget/out/parser.min.js";
-                window.lptWg = window.lptWg || {};
-                window.lptWg.projectId = projectId;
-                window.lptWg.parser = true;
-                document.head.appendChild(script);
-            })();
-        </script>
-        <script type="text/javascript">
-            (function () {
-                var projectId = 93249;
-                var script = document.createElement("script");
-                script.type = "text/javascript";
-                script.src = "https://lpt-crm.online/lpt_widget/kick-widget.js";
-                window.lptWg = window.lptWg || {};
-                window.lptWg.projectId = projectId;
-                window.lptWg.parser = true;
-                document.head.appendChild(script);
-            })();
-        </script>
-        <!-- LPTracker code End -->
+<script src="//code.jivo.ru/widget/Pivp3VnHJJ" async></script>
 
 
         <script
