change meta title

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta property="og:title" content="Бесплатный подбор автомобиля в Петербурге и за рубежом" />
+        <meta property="og:title" content="Подберем качественный автомобиль, по вашим параметрам и в рамках вашего бюджета!" />
         <meta
             property="og:description"
             content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом"
@@ -61,7 +61,7 @@
             })();
         </script>
         <!-- /Yandex.Metrika counter -->
-        <title>Бесплатный подбор автомобиля в Петербурге и за рубежом</title>
+        <title>Подберем качественный автомобиль, по вашим параметрам и в рамках вашего бюджета!</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
