[chg] meta and og title description

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta property="og:title" content="Подберем качественный автомобиль, по вашим параметрам и в рамках вашего бюджета!" />
+        <meta property="og:title" content="Автоподбор СПБ - диагностика и подбор автомобиля перед покупкой" />
         <meta
             property="og:description"
-            content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом"
+            content="Компания Честный автоподбор предлагает услуги выездной диагностики авто перед покупкой и автоподбор под ключ. Договор. Гарантия 1 год. Звоните"
         />
-        <meta name="description" content="Услуги автоэкспертов по подбору автомобиля в Петербурге и за рубежом" />
+        <meta name="description" content="Компания Честный автоподбор предлагает услуги выездной диагностики авто перед покупкой и автоподбор под ключ. Договор. Гарантия 1 год. Звоните" />
 
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
@@ -61,7 +61,7 @@
             })();
         </script>
         <!-- /Yandex.Metrika counter -->
-        <title>Подберем качественный автомобиль, по вашим параметрам и в рамках вашего бюджета!</title>
+        <title>Автоподбор СПБ - диагностика и подбор автомобиля перед покупкой</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
