--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,12 @@
             })();
         </script>
         <!-- /Yandex.Metrika counter -->
+        <!-- calltouch -->
+        <script>
+        (function(w,d,n,c){w.CalltouchDataObject=n;w[n]=function(){w[n]["callbacks"].push(arguments)};if(!w[n]["callbacks"]){w[n]["callbacks"]=[]}w[n]["loaded"]=false;if(typeof c!=="object"){c=[c]}w[n]["counters"]=c;for(var i=0;i<c.length;i+=1){p(c[i])}function p(cId){var a=d.getElementsByTagName("script")[0],s=d.createElement("script"),i=function(){a.parentNode.insertBefore(s,a)},m=typeof Array.prototype.find === 'function',n=m?"init-min.js":"init.js";s.async=true;s.src="https://mod.calltouch.ru/"+n+"?id="+cId;if(w.opera=="[object Opera]"){d.addEventListener("DOMContentLoaded",i,false)}else{i()}}})(window,document,"ct","5me5tnqt");
+        </script>
+        <!-- calltouch -->
+    
         <title>Автоподбор СПБ - диагностика и подбор автомобиля перед покупкой</title>
     </head>
     <body>
