--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,6 @@
         />
 
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
         <meta name="yandex-verification" content="27d9e9880afd3563" />
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript">
@@ -115,34 +111,91 @@
             ><img src="https://vk.com/rtrg?p=VK-RTRG-1431635-eI4tS" style="position: fixed; left: -999px" alt="" />
         </noscript>
         <div id="root"></div>
-        <!--
-  This HTML file is a template.
-  If you open it directly in the browser, you will see an empty page.
 
-  You can add webfonts, meta tags, or analytics to this file.
-  The build step will place the bundled scripts into the <body> tag.
-
-  To begin the development, run `npm start` or `yarn start`.
-  To create a production bundle, use `npm run build` or `yarn build`.
--->
-
-        <script src="//code.jivo.ru/widget/Pivp3VnHJJ" async></script>
-
+        <!-- Jquery -->
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"
         ></script>
+        <!-- Jquery -->
+
+        <!-- Popper -->
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
             integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             crossorigin="anonymous"
         ></script>
+        <!-- Popper -->
+
+        <!-- Bootstrap -->
         <script
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"
         ></script>
+        <!-- Bootstrap -->
+
+        <!-- Smart Widgets -->
         <script src="https://res.smartwidgets.ru/app.js" defer></script>
+        <!-- Smart Widgets -->
+
+        <!-- Jivo -->
+        <script src="//code.jivo.ru/widget/Pivp3VnHJJ" async></script>
+        <script type="text/javascript">
+            var _ctreq_jivo = function (sub) {
+                var sid = "64074";
+                var jc = jivo_api.getContactInfo();
+                var fio = "";
+                var phone = "";
+                var email = "";
+                if (!!jc.client_name) {
+                    fio = jc.client_name;
+                }
+                if (!!jc.phone) {
+                    phone = jc.phone;
+                }
+                if (!!jc.email) {
+                    email = jc.email;
+                }
+                var ct_data = {
+                    fio: fio,
+                    phoneNumber: phone,
+                    email: email,
+                    subject: sub,
+                    requestUrl: location.href,
+                    sessionId: window.call_value,
+                };
+                var request = window.ActiveXObject ? new ActiveXObject("Microsoft.XMLHTTP") : new XMLHttpRequest();
+                var post_data = Object.keys(ct_data)
+                    .reduce(function (a, k) {
+                        if (!!ct_data[k]) {
+                            a.push(k + "=" + encodeURIComponent(ct_data[k]));
+                        }
+                        return a;
+                    }, [])
+                    .join("&");
+                var url = "https://api.calltouch.ru/calls-service/RestAPI/" + sid + "/requests/orders/register/";
+                if (!window.ct_snd_flag) {
+                    window.ct_snd_flag = 1;
+                    setTimeout(function () {
+                        window.ct_snd_flag = 0;
+                    }, 10000);
+                    request.open("POST", url, true);
+                    request.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+                    request.send(post_data);
+                }
+            };
+            window.jivo_onIntroduction = function () {
+                _ctreq_jivo("JivoSite посетитель оставил контакты");
+            };
+            window.jivo_onCallStart = function () {
+                _ctreq_jivo("JivoSite обратный звонок");
+            };
+            window.jivo_onMessageSent = function () {
+                ct("goal", "jivo_ms");
+            };
+        </script>
+        <!-- Jivo -->
     </body>
 </html>
