[add] zen verification tag

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <meta name="yandex-verification" content="27d9e9880afd3563" />
+        <meta name="zen-verification" content="QSP0UG2d8VGClwwQUz2Sn5zMznEB9R2gyCrHpd26nhQLW8HQXeNmLOfhRTsrQ5BS" />
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript">
             (function (m, e, t, r, i, k, a) {
