[add] smart widgets roulette

--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,7 @@
             ><img src="https://vk.com/rtrg?p=VK-RTRG-1431635-eI4tS" style="position: fixed; left: -999px" alt="" />
         </noscript>
         <div id="root"></div>
+        <div class="sw-app" data-app="7c41955ee07692ad7c3dd0c9ba81b3a5"></div>
 
         <!-- Jquery -->
         <script
