--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,9 @@
             })(window, document, "ct", "bmofzgzj");
         </script>
         <!-- calltouch -->
+        <!-- ReCAPTCHA -->
+        <script src="https://www.google.com/recaptcha/api.js"></script>
+        <!-- /ReCAPTCHA -->
 
         <title>Автоподбор СПБ - диагностика и подбор автомобиля перед покупкой</title>
     </head>
