--- a/public/index.html
+++ b/public/index.html
@@ -147,25 +147,28 @@
 
         <!-- Chat App -->
         <script>
-            (function (w, d, u, j) {
-                var s = d.createElement("script");
-                s.defer = true;
-                s.onload = function () {
-                    var s = d.createElement("script");
-                    s.defer = true;
-                    s.src = j + "?" + ((Date.now() / 60000) | 0);
-                    var h = d.getElementsByTagName("script")[0];
-                    h.parentNode.insertBefore(s, h);
+            (function (a, m, o, c, r, m) {
+                a[m] = {
+                    id: "411340",
+                    hash: "451778bfe8b5a8bb8a15995d2c6864cd0d9161228074e8a922e3694a983f22fc",
+                    locale: "ru",
+                    inline: false,
+                    setMeta: function (p) {
+                        this.params = (this.params || []).concat([p]);
+                    },
                 };
-                s.src = u + "?" + ((Date.now() / 60000) | 0);
-                var h = d.getElementsByTagName("script")[0];
-                h.parentNode.insertBefore(s, h);
-            })(
-                window,
-                document,
-                "https://s3.wasabisys.com/cabinet.chatapp.online/widgetsFiles/45723/2024/06/08/e9035e30-a6fe-4a6a-b73d-4ebc4d300023.js",
-                "https://s3.wasabisys.com/cabinet.chatapp.online/external/widget/v3/index.js",
-            );
+                a[o] =
+                    a[o] ||
+                    function () {
+                        (a[o].q = a[o].q || []).push(arguments);
+                    };
+                var d = a.document,
+                    s = d.createElement("script");
+                s.async = true;
+                s.id = m + "_script";
+                s.src = "https://gso.amocrm.ru/js/button.js";
+                d.head && d.head.appendChild(s);
+            })(window, 0, "amoSocialButton", 0, 0, "amo_social_button");
         </script>
         <!-- Chat App -->
     </body>
